--- a/test_github.Rmd
+++ b/test_github.Rmd
@@ -7,17 +7,17 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-Type your name (or anything else) HERE: 
+Type your name (or anything else) HERE: Garrett Eyer
 
 Here's some code (change the variable names and values):
 ```{r}
 # Change these variable names and values:
 
-blue <- 10
+cost <- 10
 
-red <- 15
+sale <- 15
 
-purple <- blue/red
+discount <- blue/red
 
 ```
 
